force-app/main/default/objects/ampi__xx_Procurement_Requirement__c/ampi__xx_Procurement_Requirement__c.object-meta.xml
<CustomObject>
    <description>Indicate and track the goods or services required to successfully implement project activities with details such as quantity required, due date etc.</description>
    <label>Procurement Requirement</label>
    <nameField>
        <displayFormat>PR-{0000}</displayFormat>
        <label>Procurement Requirement ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Procurement Requirements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>