force-app/main/default/objects/ampi__xx_Procurement_Requirement__c/fields/ampi__xx_Activity__c.field-meta.xml
<CustomField>
    <fullName>ampi__xx_Activity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup field to specify which activity requires good or service.</description>
    <label>Activity</label>
    <referenceTo>ampi__Activity__c</referenceTo>
    <relationshipLabel>Procurement Requirements</relationshipLabel>
    <relationshipName>Procurement_Requirements</relationshipName>
    <type>Lookup</type>
</CustomField>