force-app/main/default/objects/ampi__xx_Procurement_Requirement__c/fields/ampi__xx_Actual_Cost__c.field-meta.xml
<CustomField>
    <fullName>ampi__xx_Actual_Cost__c</fullName>
    <description>Formula field that calculates the actual cost of related good or service for the related activity.</description>
    <formula>ampi__xx_Number_of_Units_Needed__c * ampi__xx_Actual_Unit_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This formula will calculate the actual cost of procuring the good or service (It is calculated by multiplying the number of units needed by the actual unit cost of good or service).</inlineHelpText>
    <label>Actual Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>