force-app/main/default/objects/ampi__xx_Procurement_Requirement__c/fields/ampi__xx_Actual_Unit_Cost__c.field-meta.xml
<CustomField>
    <fullName>ampi__xx_Actual_Unit_Cost__c</fullName>
    <description>Currency field to specify the actual cost per unit of the related good or service.</description>
    <label>Actual Unit Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>