force-app/main/default/objects/ampi__xx_Procurement_Requirement__c/fields/ampi__xx_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>ampi__xx_Due_Date__c</fullName>
    <description>Date field to specify when the related good or service is required for related activity.</description>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>