force-app/main/default/objects/ampi__xx_Procurement_Requirement__c/fields/ampi__xx_Fulfillment_Status__c.field-meta.xml
<CustomField>
    <fullName>ampi__xx_Fulfillment_Status__c</fullName>
    <description>Picklist field to indicate the fulfillment status of related good or service for the related activity.</description>
    <label>Fulfillment Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Partially Fulfilled</fullName>
            </value>
            <value>
                <fullName>Fulfilled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>