force-app/main/default/objects/ampi__xx_Procurement_Requirement__c/fields/ampi__xx_Good_Service__c.field-meta.xml
<CustomField>
    <fullName>ampi__xx_Good_Service__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup field to specify which good or service is required for the related activity.</description>
    <label>Good/ Service</label>
    <referenceTo>ampi__xx_Good_Service__c</referenceTo>
    <relationshipLabel>Procurement Requirements</relationshipLabel>
    <relationshipName>Procurement_Requirements</relationshipName>
    <type>Lookup</type>
</CustomField>