force-app/main/default/objects/ampi__xx_Procurement_Requirement__c/fields/ampi__xx_Number_of_Units_Needed__c.field-meta.xml
<CustomField>
    <fullName>ampi__xx_Number_of_Units_Needed__c</fullName>
    <description>Number field to specify the required quantity or the required number of units of related good or service.</description>
    <label>Number of Units Needed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>