force-app/main/default/objects/ampi__xx_Procurement_Requirement__c/fields/ampi__xx_Procurement_Status__c.field-meta.xml
<CustomField>
    <fullName>ampi__xx_Procurement_Status__c</fullName>
    <description>Picklist field to indicate the procurement status of related good or service for the related activity.</description>
    <label>Procurement Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Planned</fullName>
                <default>true</default>
                <label>Planned</label>
            </value>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
            <value>
                <fullName>Assigned</fullName>
            </value>
            <value>
                <fullName>Unassigned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>