force-app/main/default/objects/ampi__xx_Procurement_Requirement__c/fields/ampi__xx_Unit__c.field-meta.xml
<CustomField>
    <fullName>ampi__xx_Unit__c</fullName>
    <description>Text field to specify the unit of measurement like Number of items, Kilogram, Hours etc.</description>
    <inlineHelpText>Enter the unit of measurement ( Number, Kilograms, Hours etc)</inlineHelpText>
    <label>Unit</label>
    <length>225</length>
    <type>Text</type>
</CustomField>